--- a/css/style_head_foot.css
+++ b/css/style_head_foot.css
@@ -1,20 +1,3 @@
-@import url(https://fonts.googleapis.com/css2?family=Inconsolata:wght@300&display=swap);
-* {
-    box-sizing: border-box;
-    font-family: 'Inconsolata', monospace;
-    color: rgba(13, 13, 13, 0.95);
-}
-
-
-html, body, p {
-    margin: 0;
-    padding: 0;
-}
-
-html {
-    background-color: rgba(191, 182, 138);
-}
-
 .main-nav ul {
     display: flex;
     height: 100px;
@@ -37,66 +20,44 @@ html {
 
 .main-header {
     height: 6em;
-    position: sticky; top: 0;
+    top: 0;
     width: auto;
     background-color: rgba(191, 182, 138);
     align-items: center;
 }
 
-.section-me-desc {
+.main-footer {
+    margin: 0 20px;
+    bottom: 0;
+    height: 5em;
     width: auto;
     display: flex;
-    flex-direction: row;
+    justify-content: space-between;
+}
+
+.social-icons {
+    display: flex;
+    align-items: center;
+}
+.social-icons ul {
+    display: flex;
+    padding: 0;
+    padding-left: 10px;
+    list-style-type: none;
+}
+.social-icons ul a :hover {
+    background-color: rgba(51, 49, 38, 0.2);
+}
+
+.social-icons ul img {
+    width: 32px;
+    padding: 5px;
+}
+
+.copyright {
+    display: flex;
+    padding: 5px;
+    padding-right: 10px;
     align-items: center;
 }
 
-.section-me {
-    width: auto;
-    padding: 0;
-    margin: 0;
-    background-color: rgba(242, 242, 242);
-}
-.section-me p {
-    padding: 10px;
-    padding-left: 25.6px;
-    padding-bottom: 20px;
-    padding-right: 40px;
-    font-size: 24px;
-}
-
-
-.section-me-img img {
-    width: 400px;
-    padding: 10px;
-    padding-bottom: 20px;
-    padding-right: 20px;
-
-}
-.section-projects {
-    padding: 0;
-    background-color: rgba(13, 13, 13);
-}
-
-.section-projects p {
-    color: rgba(242, 242, 242);
-    padding: 0.6em;
-}
-
-
-.section-websites {
-    padding: 0;
-    background-color: rgba(242, 242, 242);
-}
-.section-websites p {
-    padding: 0.6em;
-}
-
-.section {
-    margin: 0 20px;
-}
-
-.subtitles {
-    padding: 0.4em;
-    margin: 0;
-    font-size: 64px;
-}
