--- a/css/styles_body.css
+++ b/css/styles_body.css
@@ -34,6 +34,13 @@ html {
     align-items: center;
 }
 
+@media (max-width: 800px) {
+    .section-me-desc {
+        flex-direction: column;
+    }
+    
+}
+
 .section-me {
     width: auto;
     padding: 0;
