--- a/css/style_projects.css
+++ b/css/style_projects.css
@@ -5,8 +5,15 @@
     margin: 5px;
 }
 .grid-item p {
-    color: whitesmoke;
+    color: rgba(242, 242, 242);
     padding: 5px;
+    padding-left: 15px;
+}
+
+.grid-item h2 {
+    color: rgba(242, 242, 242);
+    font-style: normal;
+    padding-left: 15px;
 }
 
 .grid-container {
@@ -14,6 +21,36 @@
     grid-template-columns: 100px auto 100px auto 100px;
     grid-template-rows: repeat(3, 100px auto) 100px;
     justify-content: space-around;
+}
+
+.small-grid {
+    display: grid;
+    grid-template-columns: 280px auto;
+    grid-template-rows: 66px auto;
+}
+
+.small-grid h2 {
+    grid-row: 1 / 2;
+    grid-column: 1 / 3;
+    align-self: center;
+}
+.small-grid p {
+    grid-row: 2/3;
+    grid-column: 1/2;
+    align-self: stretch;
+    justify-self:center;
+    align-self: center;
+}
+.small-grid img {
+    width: 300px;
+    padding: 5px;
+}
+.small-grid a {
+    
+    grid-row: 2/3;
+    grid-column: 2/3;
+    justify-self:center;
+    align-self: center;
 }
 
 .project1 {
@@ -45,5 +82,42 @@
     background-color: rgba(13, 13, 13);
 }
 .main-nav li a {
-    color: whitesmoke;
+    color: rgba(242, 242, 242);
+}
+
+
+@media (max-width: 1450px){
+    .grid-container {
+        display: grid;
+        grid-template-columns: 100px auto 100px;
+        grid-template-rows: repeat(6, 100px auto) 100px;
+        justify-content: space-around;
+    }
+
+    .project1 {
+        grid-column: 2 / 3;
+        grid-row: 2 / 3;
+    }
+    .project2 {
+        grid-column: 2 / 3;;
+        grid-row: 4 / 5;
+    }
+    .project3 {
+        grid-row: 6 / 7;
+        grid-column: 2 / 3;
+    }
+    .project4 {
+        grid-column: 2 / 3;;
+        grid-row: 8 / 9;
+    }
+    .project5 {
+        grid-column: 2 / 3;
+        grid-row: 10 / 11;
+    }
+    .project6 {
+        grid-column: 2 / 3;;
+        grid-row: 12 / 13;
+    }
+
+
 }
