--- a/css/styles_body.css
+++ b/css/styles_body.css
@@ -34,12 +34,7 @@ html {
     align-items: center;
 }
 
-@media (max-width: 800px) {
-    .section-me-desc {
-        flex-direction: column;
-    }
-    
-}
+
 
 .section-me {
     width: auto;
@@ -64,15 +59,36 @@ html {
     opacity: 0.9;
 
 }
+
+.section-project-cont {
+    width: auto;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+}
+.section-projects p {
+    padding: 10px;
+    padding-left: 25.6px;
+    padding-bottom: 20px;
+    padding-right: 40px;
+    font-size: 24px;
+    color: rgba(242, 242, 242);
+}
+
+.section-projects img {
+    width: 400px;
+    padding: 10px;
+    padding-bottom: 20px;
+    padding-left: 40px;
+    opacity: 0.9;
+}
+
 .section-projects {
+    width: auto;
     padding: 0;
     background-color: rgba(13, 13, 13);
 }
 
-.section-projects p {
-    color: rgba(242, 242, 242);
-    padding: 0.6em;
-}
 
 
 .section-websites {
@@ -95,4 +111,14 @@ html {
 
 .button-more p {
     font-size: 18px;
+}
+
+@media (max-width: 800px) {
+    .section-me-desc {
+        flex-direction: column;
+    }
+    .section-project-cont {
+        flex-direction: column;
+    }
+    
 }
